--- a/proyecto web/index.html
+++ b/proyecto web/index.html
@@ -5,8 +5,9 @@
 	<title>Titulo</title>
 </head>
 <body>
-	<div>
+    <div>
       <p>hola mundo</p>
+      <p>hola mundo </p>
     </div>
 </body>
 </html>
